Fixes #1790. Removed margin: 0 from nested row inside forms to fix alignment issue

--- a/scss/foundation/components/_forms.scss
+++ b/scss/foundation/components/_forms.scss
@@ -245,21 +245,20 @@ $input-error-message-font-color-alt: #333 !default;
 @if $include-html-form-classes {
 	/* Standard Forms */
   form { margin: 0 0 $form-spacing; }
-  
+
   /* Using forms within rows, we need to set some defaults */
   form .row { @include form-row-base; }
-  form .row .row { margin: 0; }
-  
+
   /* Label Styles */
   label { @include form-label;
     &.right { @include form-label(right,false); }
     &.inline { @include form-label(inline,false); }
   }
-  
+
   /* Attach elements to the beginning or end of an input */
   .prefix,
   .postfix { @include prefix-postfix-base; }
-  
+
   /* Adjust padding, alignment and radius if pre/post element is a button */
   .postfix.button { @include button-size(false,false,false); @include postfix(false,true); }
   .prefix.button { @include button-size(false,false,false); @include prefix(false,true); }
@@ -267,7 +266,7 @@ $input-error-message-font-color-alt: #333 !default;
   .postfix.button.radius { @include side-radius(right, $global-radius); }
   .prefix.button.round { @include side-radius(left, 1000px); }
   .postfix.button.round { @include side-radius(right, 1000px); }
-  
+
   /* Separate prefix and postfix styles when on span so buttons keep their own */
   span.prefix { @include prefix();
     &.radius { @include side-radius(left, $global-radius); }
@@ -275,7 +274,7 @@ $input-error-message-font-color-alt: #333 !default;
   span.postfix { @include postfix();
     &.radius { @include side-radius(right, $global-radius); }
   }
-  
+
   /* Input groups will automatically style first and last elements of the group */
   .input-group {
     &.radius {
@@ -295,7 +294,7 @@ $input-error-message-font-color-alt: #333 !default;
       }
     }
   }
-  
+
   /* We use this to get basic styling on all basic form elements */
   input[type="text"],
   input[type="password"],
@@ -314,12 +313,12 @@ $input-error-message-font-color-alt: #333 !default;
     @include form-element;
     @include single-transition(all, 0.15s, linear);
   }
-  
+
   /* We add basic fieldset styling */
   fieldset {
     @include fieldset;
   }
-  
+
   /* Error Handling */
   .error input,
   input.error,
@@ -327,10 +326,10 @@ $input-error-message-font-color-alt: #333 !default;
   textarea.error {
     @include form-error-color;
   }
-  
+
   .error label,
   label.error { @include form-label-error-color; }
-  
+
   .error small,
   small.error {
     @include form-error-message;
